@@ -53,20 +53,6 @@ div.tab, button:disabled {
     color: #999999 !important;
 }
 
-
-.test {
-        display: block;
-        background-color: inherit;
-        color: black;
-        padding: 22px 16px;
-        width: 100%;
-        border: none;
-        outline: none;
-        text-align: left;
-        cursor: pointer;
-        transition: 0.3s;
-}
-
 /* Change background color of buttons on hover */
 div.tab button:hover {
     background-color: #ddd;
@@ -131,19 +117,16 @@ div.tab button.active {
         border-width: 1px;
         border-color: LightGrey;
         margin-right: 4px;
+        
 }
-
-/*
-#rawHeatmapContainer {
-        border-style: solid;
-        border-width: 1px;
-        border-color: LightGrey;
-}
-*/
 
 .persistSave {
         margin: 4px;
         background-color: WhiteSmoke;
+}
+
+.persistSave:hover {
+        background-color: #d9d9d9;
 }
 
 .saveButton {
